# CICD-Pipeline-Management-Tool

./: .env  .gitignore  Dockerfile.cli  FeatureStatus.md  README.md  deploy.py  get-pip.py  pyproject.toml  requirements.txt  setup.py
.cicd-pipelines/: YAML.md  t2.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: code_review.yml  merge_to_main.yml
cli/: README.md  main.py
cli/commands/: cancel_pipeline.py  check_config.py  dryrun.py
cli/commands/run_pipelines/: data_models.py  job_executor.py  path_reader.py  pipeline_validation.py
cli/utils/: constants.py  dependency_utils.py  logging_config.py  parallel_pipeline_run.py  server_client.py  thread_safe_counter.py
database/: db_setup.md  db_setup.sh  docker-compose.yml
database/migrations/: init_schema.sql  insert_sample_data.sql
