[tool.poetry]
name = "t2-cicd"
version = "0.1.0"
description = "CLI Management Tool"
authors = ["Kerimi", "BohaoChenEric", "Lynn-Hu-D", "Bill-Yuyi", "GOODMIA2024"]
readme = "README.md"
license = "MIT"  # Adjust the license as needed
packages = [
    { include = "cli" },
]

[tool.poetry.dependencies]
# Runtime dependencies
python = "^3.11" # sphinx require >3.9 and < 4.0
requests = "^2.32.3"
fastapi = "^0.115.4"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
docker = "^7.1.0"
psycopg2-binary = "^2.9.9"
annotated-types = "^0.7.0"
anyio = "^4.6.2"
certifi = "^2024.8.30"
charset-normalizer = "^3.4.0"
click = "^8.1.7"
exceptiongroup = "^1.2.2"
httpx = "^0.25.1"
gitdb = "^4.0.11"
GitPython = "^3.1.43"
h11 = "^0.14.0"
idna = "^3.10"
iniconfig = "^2.0.0"
packaging = "^24.1"
pathspec = "^0.12.1"
pluggy = "^1.5.0"
psycopg = "^3.2.3"
pydantic_core = "^2.23.4"
pytest = "^8.3.3"
pytest-cov = "^4.1"
python-dotenv = "^1.0.1"
PyYAML = "^6.0.2"
smmap = "^5.0.1"
sniffio = "^1.3.1"
starlette = "^0.41.2"
tomli = "^2.0.2"
typing_extensions = "^4.12.2"
urllib3 = "^2.2.3"
ruamel-yaml = "^0.18.6"
sphinx = "^8.1.3"
wrapt = "1.16.0"
pytest-mock = "^3.14.0"

[tool.poetry.dev-dependencies]
# Development dependencies for testing, linting, etc.
pytest = "^8.3.3"
flake8 = "^5.0.4"
pylint = "^2.17.0"
mypy = "^1.3.0"
black = "^23.0.0"  # Add autoformatter for Python code

[tool.poetry.scripts]
# Entry points for your CLI tool
t2-cicd = "cli.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov=cli --cov=server --cov=database --cov-branch --cov-report=xml --cov-report=term"
testpaths = ["tests"]

[tool.coverage.run]
omit = ["tests/*"]
